Add new Picture

--- a/recipe.html
+++ b/recipe.html
@@ -57,7 +57,7 @@
                                 <b>Number of servings: <font color="DeepPink"> 6 </font></b>
                             </p>
                         </td>
-                        <td width="50%"><img src="img/lemon-drizzle-cake.png" alt="lemon drizzle cake"/> </td>
+                        <td width="50%"><img src="lemon-drizzle-cake.png" alt="lemon drizzle cake"/> </td>
                     </tr>
         
         </table>
